# sentinel-ai-microservice

sentinel-ai-microservice/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
sentinel-ai-microservice/.github/workflows/: ci-cd.yml
sentinel-ai-microservice/app/: config.py  explain.py  main.py  metrics.py  model.py  schemas.py
sentinel-ai-microservice/app/routers/: health.py  predict.py
sentinel-ai-microservice/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.example.yaml  service.yaml
sentinel-ai-microservice/monitoring/: prometheus.yml
sentinel-ai-microservice/scripts/: train_model.py
sentinel-ai-microservice/tests/: conftest.py  test_health.py  test_model.py  test_predict.py
